applications/helios-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helios-server
  namespace: helios-server
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: helios-server
  template:
    metadata:
      labels:
        app: helios-server
    spec:
      containers:
      - name: helios-server
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/helios-server/helios-voting:master-0e6254f
        resources:
          requests:
            cpu: 2000m
            memory: 2000Mi
          limits:
            cpu: 3000m
            memory: 3000Mi
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          failureThreshold: 3
          successThreshold: 1
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 20
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 5
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
